--- a/client/css/style.css
+++ b/client/css/style.css
@@ -236,6 +236,11 @@ input::-webkit-inner-spin-button {
   flex-direction: row;
   justify-content: space-between;
 }
+
+.total-order-holder h4:nth-of-type(3) {
+  margin-bottom: 0px;
+}
+
 .total-order-holder h4 span:nth-child(1) {
   font-weight: 600;
   font-size: 16px;
