--- a/client/css/style.css
+++ b/client/css/style.css
@@ -177,6 +177,7 @@ input::-webkit-inner-spin-button {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  text-align: left;
 }
 .name-and-description span:first-child {
   font-weight: bold;
@@ -295,6 +296,19 @@ input::-webkit-inner-spin-button {
   padding: 10px;
 }
 
+.voucher-form-error {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 30px;
+}
+
+.voucher-form-error p {
+  margin: 0;
+  font-size: 14px;
+  color: red;
+}
+
 .discount-price-holder {
   border-top: 1px solid #8b94b3;
   padding-top: 20px;
@@ -337,9 +351,12 @@ input::-webkit-inner-spin-button {
   width: 100%;
 }
 
+.promotions-holder h4 {
+  margin-top: 0;
+}
+
 .promotion-holder {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -379,6 +396,11 @@ input::-webkit-inner-spin-button {
   font-weight: 600;
   font-size: 16px;
   color: #3c8a3c;
+}
+
+.error-holder {
+  display: flex;
+  align-items: center;
 }
 
 .cart-and-summary-holder {
@@ -532,8 +554,11 @@ input::-webkit-inner-spin-button {
 }
 
 #error-message {
+  padding: 8px 16px;
+  border-radius: 5px;
   background: #f0c4c4;
   border: 1px solid #732121;
+  font-weight: 500;
 }
 
 .bad-request {
